<resources>
    <string name="app_name">Aussie Oxford</string>
    <string name="nerd_out">Nerd Out!</string>
    <string name="quizquiz">QuizQuiz</string>
    <string name="enter_your_number">Enter your number!</string>
    <string name="they_have_all_functionality_of_a_non_nested_class_but_with_limited_scope_they_also_have_full_access_to_the_class_in_which_they_are_nested">They have all functionality of a non-nested class, but with limited scope. They also have full access to the class in which they are nested.</string>
    <string name="word">Word</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register_for_an_account">Register for an account!</string>
    <string name="login">Login!</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="password_not_matching">Passwords do not match!</string>
    <string name="error_invalid_nane">Please enter your name</string>
    <string name="sat_words">SAT Words!</string>
    <string name="lsat_words">LSAT Words!</string>
    <string name="gre_words">GRE Words!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_word_definition">WordDefinition</string>
</resources>
