<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3">

    <TextView
        android:id="@+id/lsat_words"
        style="@style/Base.Widget.AppCompat.Button"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:text="@string/lsat_words"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/sat_words"
        style="@style/Base.Widget.AppCompat.Button"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryLight"
        android:layout_height="wrap_content"
        android:text="@string/sat_words"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/gre_words"
        style="@style/Base.Widget.AppCompat.Button"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gre_words"
        android:textAlignment="center"
        android:textSize="24sp" />
    <!--<TextView-->
        <!--style="@style/Base.Widget.AppCompat.Button"-->
        <!--android:id="@+id/populate_database"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:gravity="center"-->
        <!--android:text="Populate database"-->
        <!--android:textAlignment="center"-->
        <!--android:textSize="24sp"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.0"-->
        <!--android:layout_marginTop="8dp"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/implicit_intent"-->
        <!--app:layout_constraintVertical_bias="0.427" />-->

</LinearLayout>